<?xml version="1.0" encoding="UTF-8"?>
<!--
/* (c) 2023 Open Source Geospatial Foundation - all rights reserved
 * This code is licensed under the GPL 2.0 license, available at the root
 * application directory.
 */
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.geoserver.acl</groupId>
    <artifactId>gs-acl</artifactId>
    <version>${revision}</version>
  </parent>
  <artifactId>application</artifactId>
  <packaging>pom</packaging>
  <modules>
    <module>authorization-api</module>
    <module>authorization-impl</module>
  </modules>
  <properties>
    <java.version>17</java.version>
  </properties>
</project>
